--- a/requirements.txt
+++ b/requirements.txt
@@ -47,12 +47,12 @@ scipy==1.10.1
 six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.4.4
-tensorboard==2.12.3
-tensorboard-data-server==0.7.0
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-intel
+tensorflow-io-gcs-filesystem
 termcolor==2.3.0
 threadpoolctl==3.1.0
 typing_extensions==4.5.0
