--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,30 @@
-# Define the upstream Django server
-upstream django {
-    server web:8000;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+
+events {
+    worker_connections 1024;
 }
 
-# Nginx configuration
-server {
-    listen 80;
-    server_name example.com;
+http {
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location / {
-        # Proxy pass the requests to the Django server
-        proxy_pass http://django;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+    access_log  /var/log/nginx/access.log  main;
+
+    server {
+        listen 8080;
+        server_name _;
+
+        location / {
+            proxy_pass http://127.0.0.1:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /static/ {
+            alias /static/;
+        }
     }
 }
